# digibank

./: Makefile  README.md
diba/: Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.old  README  THEORY  alldirs.sh  clpack.py  config.h  config.h.in  config.status  configure  configure.ac  configure.lineno  diba.inc  dibamac.inc  getdeps.sh  gitignore  noauto.sh  test-test.sh
diba/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
diba/blockchain/: dibapow.c
diba/bluepoint/: block_blue2.c  blueencrypt.c  bluemac.h  bluepoint2.h
diba/bluepoint/.deps/: bluepoint3.Po
diba/chest/: Makefile.old
diba/common/: diba.h  dibastr.h  dibautils.c  dibautils.h
diba/common/.deps/: dibastr.Po  dibautils.Po
diba/currency/: Makefile.old  README  dibainit.c
diba/data/blockchain/: qmz9frVqmqGx.bce
diba/data/customers/: data.mysql
diba/docs/: diba400.xcf  diba_matrix.xcf  one_token_test.txt  synonimes.odt  voter.doc
diba/docs/html/: ____init_____8py.html  algos_8c.html  annotated.html  ascii_8c.html  block__blue2_8c.js  bluedecrypt_8c.html  bluemac_8h_source.html  blueutil_8c.html  blueutil_8c.js  blueutil_8h.html  classtreehand_1_1_tree_hand.js  classyellow_1_1stick_doc.js  custselect_8py.html  diba_8h.html  dibadec_8c.html  dibaencrypt_8c.js  dibanull_8c.html  dibanull_8c.js  dibastr_8h.html  dibautils_8c.js  digibank_8c.html  dir_501bf0130d8afce9ef94b89bc6c3abe6.js  dir_579caebae0c8c23ce02f53478dbfc172.html  dir_c1ce99697cbd6b458d23ed598f5ca49b.html  dump_8c.js  encdec_8c.js  encrypt_8c.html  functions_func.html  functions_vars.html  gcry_8c.html  gcry_8c.js  gcry_8h.html  gcry_8h.js  gcry_8h_source.html  getpass_8c.js  getpass_8h.html  globals_defs.html  globals_func_g.html  globals_func_p.html  globals_func_u.html  (+21 more)
diba/docs/html/search/: all_15.js  all_7.js  all_9.js  all_b.js  all_e.js  all_f.js  classes_7.js  defines_2.js  defines_5.js  defines_a.js  files_e.js  functions_0.js  functions_1.js  functions_17.js  functions_3.js  functions_4.js  functions_6.js  functions_b.js  functions_d.js  namespaces_1.js  namespaces_5.js  searchdata.js  typedefs_0.js  variables_10.js  variables_4.js  variables_a.js  variables_c.js  variables_e.js  variables_f.js
diba/docs/latex/: ____init_____8py.tex  bdate_8h.tex  block__blue2_8c.tex  bluepy_8c.tex  bluepy_8h.tex  blueutil_8c.tex  blueutil_8h.tex  classcustselect_1_1_list_cust.tex  classpadding_1_1_padding.eps  classpysql_1_1dibasql.tex  classyellow_1_1stick_list.tex  custselect_8py.tex  dibachain_8c.tex  dibagen_8c.tex  dibastr_8c.tex  dibautils_8h.tex  dir_11bc0974ce736ce9a6fadebbeb7a8314.tex  dir_501bf0130d8afce9ef94b89bc6c3abe6.tex  dump_8c.tex  files.tex  gsexp_8h.tex  namespacetreehand.tex  pysql_8py.tex  struct__getpassx.tex  struct__opts2.tex  structcentinel.tex  test5_8c.tex  test__asym_8c.tex  test__base64_8c.tex  test__blue3_8c.tex  test__sexp_8c.tex  transport_2test1_8c.tex  zmalloc_8c.tex  zmalloc_8h.tex
diba/docs/man/man3/: C__develop5_digibank_diba-006_transport_.3  base64.h.3  bdate.py.3  bluedecrypt.c.3  bluemac.h.3  bluepoint2.c.3  bluepoint2.h.3  bluepoint3.h.3  dibadecrypt.c.3  dibaencrypt.c.3  dibagen.c.3  dibagui.py.3  dibagui_MainWin.3  dibapow.c.3  dibautils.c.3  gcry.h.3  gsexp.h.3  pysql.py.3  pysql_dibasql.3  test4.c.3  test_asym.c.3  test_blue2.c.3  test_blue3.c.3  test_zmalloc.c.3  treehand.3  treehand.py.3  yellow_stickDoc.3  zmalloc.c.3
diba/gui/: custselect.py  dibagui.py  newcust.py  sutil.py
diba/keygen/: Makefile  Makefile.am  Makefile.in  Makefile.old  README  aa.key  aa.pub  dibakeygen.c  dibakeyinfo.c  sexp.py  sexp.txt  sexpParser.py  test_sexp.py
diba/keygen/.deps/: base64.Po  dibafcom.Po  dibafile.Po  dibakeygen.Po  dibakeyinfo.Po  dibastr.Po  dibautils.Po  misc.Po
diba/server/: Makefile  Makefile.old  README  bb  client.key  def_keys.c  dibacli_hello.c  dibacli_key.c  dibacli_ping.c  dibacli_sess.c  dibaclient.c  dibaexc.c  dibaquery.c  dibascom.c  dibascom.h  dibaserv.c  dibaserv.exe.stackdump  dibaworker.c  killd.sh  test.c  test_keyb.c
diba/server/keys/: cc.key  cc.pub  server.key  server.pub
diba/server/study/: dibaresolv.c  test_keyb_old.c
diba/study/: Makefile  test_sqlite.c
diba/tools/: Makefile  Makefile.am  Makefile.am.old  Makefile.in  Makefile.old  awk.txt  base64.c  cmdline.c  dibabuff.c  dibabuff.h  dibafcom.c  dibafcom.h  dibafile.c  dibafile.h  dibalog.txt  gcry.c  gcry.h  getpass.c  getpass.h  gsexp.c  md5sum.txt  misc.c  misc.h  readpass.sh  readpass2.sh  readpass3.sh  readpass4.sh  test_base64b.c  test_buffbuff.c  test_buffkeys.c  test_comline.org  test_dibabuff.c  test_dibabuffa.org  test_getpass.org  test_prep2.sh  test_sdl.c  test_two.sh  test_zip.org  test_zstr.c  wintermios.h  (+3 more)
diba/tools/.deps/: base64.Po  cmdline.Po  dibabuff.Po  dibafcom.Po  dibafile.Po  gcry.Po  getpass.Po  gsexp.Po  misc.Po  test_base64.Po  test_base64a.Po  test_base64b.Po  test_buffbuff.Po  test_buffkeys.Po  test_chunk.Po  test_comline.Po  test_dibabuffa.Po  test_getpass.Po  test_keys.Po  test_misc.Po  test_zip.Po  test_zmalloc.Po  test_zstr.Po  zmalloc.Po  zstr.Po
diba/tools/tests/: test.tmp  test_base64  test_base64a  test_base64b  test_buffbuff  test_buffkeys  test_buffkeys.org  test_chunk  test_chunk.c  test_chunk.diba  test_chunk.org  test_chunk_zip.diba  test_comline  test_comline.c  test_dibabuffa.c  test_dibabuffa.exe.stackdump  test_dibafile  test_getpass  test_getpass.c  test_getpass.org  test_keys  test_keys.c  test_keys.diba  test_keys.org  test_misc  test_one.sh  test_prep.sh  test_zip  test_zip.c  test_zmalloc  test_zmalloc.c  test_zstr  test_zstr.org
diba/tools/tests/.deps/: test_base64.Po  test_base64a.Po  (+11 more)
diba/transport/: Makefile  Makefile.am  Makefile.in  Makefile.old  README  bb.key  bb.pub  blocksample.dec  blocksample.enc  cc.key  cc.pub  dibasign.c  makefile.inc.txt  sample.dec  sample.enc  test1.c
diba/transport/.deps/: bluepoint3.Po  cmdline.Po  dibadecrypt.Po  dibaencrypt.Po  gcry.Po  getpass.Po  gsexp.Po  zmalloc.Po  zstr.Po
diba/transport/testkey/: testkey.pub
diba/voting/: Makefile.old
(+1741 files in other folders)
